--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,9 +11,12 @@
 		<title>My Astro Site</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
+        
+        <h1>Blog</h1>
+        <h2>First entry</h2>
+        <p>Ipsum dolorem</p>
 	</body>
 </html>
